# NuAnalytics

./: .clippy.toml  .editorconfig  .eslintrc.json  .gitattributes  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  .stylelintrc.json  Cargo.toml  Development.md  LICENSE  METRICS_ERROR_REPORT.md  Readme.md  SUMMARY.md  TOMORROW.md  debug_california.sh  package-lock.json  package.json  tsconfig.json  tsconfig.vitest.json  tsconfig.wasm.json  vitest.config.ts
.cargo/: config.toml
.github/workflows/: lint.yml  test.yml
crates/logger/: Cargo.toml  README.md
crates/logger/examples/: demo_features.rs
crates/logger/src/: lib.rs
crates/logger/tests/: basic.rs  new_features.rs
crates/nu_logger/: Cargo.toml
crates/nu_logger/src/: lib.rs
docs/: config.md  planner.md
docs/design/: CLI.md
docs/rust/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/rust/nu_analytics/: all.html  index.html  macro.debug!.html  macro.debug.html  macro.error!.html  macro.error.html  macro.info!.html  macro.info.html  macro.verbose!.html  macro.verbose.html  macro.warn!.html  macro.warn.html  sidebar-items.js
docs/rust/nuanalytics/: all.html  fn.determine_output_type.html  fn.generate_report_output.html  fn.handle_report_format_conflict.html  fn.main.html  fn.parse_level.html  fn.process_single_input.html  fn.run_planner.html  index.html  sidebar-items.js  struct.PlannerOptions.html
docs/rust/nuanalytics_cli/: all.html  enum.LogLevelArg.html  fn.main.html  index.html  sidebar-items.js  struct.Cli.html
docs/rust/search.index/: 00d3c0078e86.js  017d95993737.js  029d090d30f8.js  048d5d18cb1e.js  062aa47d337b.js  064c0e9846c4.js  0dd9e2862582.js  121db228ba5d.js  130cd4f04c74.js  135c86965f92.js  139abb37a346.js  15cf24ead176.js  16cc19365ef1.js  173b87f1518b.js  21fd1baf66a7.js  22082893fe4c.js  223cf995eeee.js  237113ae3164.js  24405638088b.js  2561f7a5b36f.js  294122bd27f7.js  2946dbd05182.js  32510c3efa37.js  3491e69503c5.js  3493bbe79be2.js  365797ad84d6.js  36c374190909.js  37da0aa85888.js  37fbbaece510.js  3912a7598d58.js  39361c0bddc0.js  3a4da2fa12bd.js  3cbc529245a6.js  3d326b494678.js  3d3f11c79def.js  3f64172f5c43.js  4083738fd07b.js  4092d4ff2b2c.js  (+34 more)
output/: BSCS_Hawaii_Manoa_w_metrics.csv  California_Berkely_V2_w_metrics.csv  Colostate_CSDegree_2017_w_MATH_w_metrics.csv  Colostate_CSDegree_2017_w_metrics.csv  Colostate_CSDegree_w_metrics.csv  Kennesaw_State_University_CS_w_metrics.csv  Metropolitan_State_University_CS_w_metrics.csv  Michigan_Ann_Arbor_CS_w_metrics.csv  U_of_Colorado_Boulder_CS_w_metrics.csv
samples/: Readme.md
samples/correct/: BSCS_Hawaii_Manoa_w_metrics.csv  California_Berkely_V2_w_metrics.csv  Colostate_CSDegree_2017_w_MATH_w_metrics.csv  Colostate_CSDegree_2017_w_metrics.csv  Colostate_CSDegree_w_metrics.csv  Kennesaw_State_University_CS_w_metrics.csv  Metropolitan_State_University_CS_w_metrics.csv  Michigan_Ann_Arbor_CS_w_metrics.csv  U_of_Colorado_Boulder_CS_w_metrics.csv
samples/plans/: BSCS_Hawaii_Manoa.csv  California_Berkely_V2.csv  Colostate_CSDegree.csv  Colostate_CSDegree_2017.csv  Colostate_CSDegree_2017_w_MATH.csv  Kennesaw_State_University_CS.csv  Metropolitan_State_University_CS.csv  Michigan_Ann_Arbor_CS.csv  U_of_Colorado_Boulder_CS.csv
samples/reports/: BSCS_Hawaii_Manoa_report.html  BSCS_Hawaii_Manoa_report.md  California_Berkely_V2_report.html  California_Berkely_V2_report.md  Colostate_CSDegree_2017_report.html  Colostate_CSDegree_2017_report.md  Colostate_CSDegree_2017_w_MATH_report.html  Colostate_CSDegree_2017_w_MATH_report.md  Colostate_CSDegree_report.html  Colostate_CSDegree_report.md  Colostate_CSDegree_w_metrics_report.html  Colostate_CSDegree_w_metrics_report.md  Colostate_Report.html  Kennesaw_State_University_CS_report.html  Kennesaw_State_University_CS_report.md  Metropolitan_State_University_CS_report.html  Metropolitan_State_University_CS_report.md  Michigan_Ann_Arbor_CS_report.html  Michigan_Ann_Arbor_CS_report.md  U_of_Colorado_Boulder_CS_report.html  U_of_Colorado_Boulder_CS_report.md  report.html
scripts/: open_docs.py  quick_commands.md
src/: lib.rs
src/assets/: DefaultCLIConfigDebug.toml  DefaultCLIConfigRelease.toml  Readme.md
src/cli/: args.rs  main.rs
src/core/: config.rs  metrics.rs  metrics_export.rs  mod.rs
src/logger/: mod.rs
src/native/: main.rs
src/shared/: logger.rs  mod.rs
src/wasm/: index.html  mod.rs
tests/: config_tests.rs  integration.rs
tests/rs/: logger.rs  metrics_comparison.rs  mod.rs  planner.rs  smoke.rs
tests/typescript/: sample.spec.ts
(+244 files in other folders)
