[package]
name = "nu_analytics"
version = "0.1.0"
edition = "2021"

[lib]
name = "nu_analytics"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

# CLI binary (default)
[[bin]]
name = "nuanalytics-cli"
path = "src/native/main.rs"

# WASM library (requires wasm-bindgen feature)
[dependencies]
wasm-bindgen = "0.2"
clap = { version = "4.5", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["console"] }

[features]
default = ["log-info", "log-debug"]
log-info = []
log-debug = []

[profile.release]
opt-level = "z"  # Optimize for size
lto = true        # Enable Link Time Optimization

# Linting configuration
[lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
correctness = "deny"
perf = "deny"
