[package]
name = "nu_analytics"
version = "0.1.0"
edition = "2021"

[lib]
name = "nu_analytics"
path = "src/lib.rs"
crate-type = ["rlib"]

# CLI binary (default)
[[bin]]
name = "nuanalytics"
path = "src/cli/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
logger = { path = "crates/logger" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
askama = "0.12"
printpdf = "0.7"

[dev-dependencies]
tempfile = "3.8"

# No WASM target dependencies; CLI-only

[features]
default = ["log-info", "log-debug", "verbose", "file-logging"]
# Forward feature flags to the logger crate
log-info = ["logger/log-info"]
log-debug = ["logger/log-debug"]
verbose = ["logger/verbose"]
file-logging = ["logger/file-logging"]

[profile.release]
opt-level = "z"  # Optimize for size
lto = true        # Enable Link Time Optimization

# Linting configuration
[lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
correctness = "deny"
perf = "deny"

[workspace]
members = [
	"crates/logger",
]
