[package]
name = "nu-analytics"
version = "0.1.0"
edition = "2021"
authors = ["Albert Lionelle <a.lionelle@northeastern.edu>"]
description = "A CLI tool for computing Curricular Analytics metrics. Based off metrics from CurricularAnalytics.org. Currently, only basic metrics and additional reporting features."
license = "MIT"
repository = "https://github.com/NeuCurricularAnalytics/NuAnalytics"
keywords = ["Curricular Analytics", "Curriculum", "Research"]
readme = "Readme.md"
categories = ["command-line-utilities", "science"]

[lib]
name = "nu_analytics"
path = "src/lib.rs"
crate-type = ["rlib"]

# CLI binary (default)
[[bin]]
name = "nuanalytics"
path = "src/cli/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
askama = "0.12"

[dev-dependencies]
tempfile = "3.10"

# No WASM target dependencies; CLI-only

[features]
default = ["log-info", "log-debug", "verbose", "file-logging"]
log-info = []
log-debug = []
verbose = []
file-logging = []

[profile.release]
opt-level = "z"  # Optimize for size
lto = true        # Enable Link Time Optimization

# Linting configuration
[lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
correctness = "deny"
perf = "deny"

# Note: logger is now an internal module; no workspace members required.
