[package]
name = "nu_logger"
version = "0.1.0"
edition = "2021"

[lib]
name = "nu_logger"
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
# Mirror the parent crate's feature flags for consistency
default = ["log-info", "log-debug"]
log-info = []
log-debug = []

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["console"] }
wasm-bindgen = "0.2"
